# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  buildAndRun.sh  config1.txt
.github/workflows/: cmake-multi-platform.yml
Resources/: CMakeLists.txt  config1.txt
cmake/: UpdateSubmodules.cmake
otherScripts/: Dockerfile  testGroundTruthGenerator.py
sourceCode/: Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  IA.cpp  IA.hpp  Move.cpp  Move.hpp  PathManager.cpp  PathManager.hpp  Pieces.cpp  Pieces.hpp  boardFlags.cpp  boardFlags.hpp  deplacement.cpp  deplacement.hpp  evaluationFunctions.cpp  evaluationFunctions.hpp  helper.cpp  helper.hpp  indexHandler.cpp  indexHandler.hpp  main.cpp  match.cpp  match.hpp  testFile.txt  testFileFENPositions.json  testFileFENPositions.txt  testFilePositionAvaible.json  testFilePositionAvaible.txt  testFilePositionCount.json  testFilePositionCount.txt  testIA.json  unitTests.cpp
sourceCode/mainCode/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  IA.cpp  IA.hpp  Move.cpp  Move.hpp  Pieces.hpp  boardFlags.cpp  indexHandler.cpp  indexHandler.hpp  main.cpp  match.cpp  match.hpp
sourceCode/testCode/test1/: main.cpp
